--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "coveralls": "./node_modules/coveralls/bin/coveralls.js"
   },
   "scripts": {
-    "test": "mocha test --recurseive -R spec",
+    "test": "mocha test --recursive -R spec",
     "coveralls": "./node_modules/mocha/bin/mocha test --recursive -r blanket -R mocha-lcov-reporter | coveralls"
   },
   "repository": {
